--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm install && node index.js"
+    "start": "npm install && node index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +18,9 @@
     "express": "^4.21.1",
     "mongoose": "^8.7.2",
     "nodemon": "^3.1.7"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0",
+    "supertest": "^7.2.2"
   }
 }
