--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,108 +22,105 @@ jobs:
       uses: actions/checkout@v4
 
     # ----------------------------------------------------
-    # 2. Setup Java
+    # 2. Setup Node.js
     # ----------------------------------------------------
-    - name: Set up Java 11
-      uses: actions/setup-java@v3
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
       with:
-        distribution: temurin
-        java-version: '11'
-        cache: maven
+        node-version: '18'
+        cache: 'npm'
 
     # ----------------------------------------------------
-    # 3. Linting (Checkstyle)
+    # 3. Install Dependencies
     # ----------------------------------------------------
-    - name: Run Maven Checkstyle (Linting)
-      run: mvn checkstyle:check
+    - name: Install dependencies
+      run: npm ci
+      # Reason: Clean, reproducible installs
+
+    # ----------------------------------------------------
+    # 4. Linting
+    # ----------------------------------------------------
+    - name: Run ESLint
+      run: npm run lint
       continue-on-error: true
-      # Reason: Surfaces technical debt early without blocking delivery
+      # Reason: Prevents technical debt without blocking pipeline
 
     # ----------------------------------------------------
-    # 4. SAST – CodeQL
+    # 5. SAST – CodeQL
     # ----------------------------------------------------
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
       with:
-        languages: java
-
-    - name: CodeQL Autobuild
-      uses: github/codeql-action/autobuild@v3
+        languages: javascript
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
-      # Reason: Detects OWASP Top 10 issues (SQLi, XSS, deserialization)
+      # Reason: Detects OWASP Top 10 issues (XSS, injections)
 
     # ----------------------------------------------------
-    # 5. SCA – Dependency Vulnerability Scan
+    # 6. SCA – Dependency Vulnerability Scan
     # ----------------------------------------------------
-    - name: OWASP Dependency Check
-      uses: dependency-check/Dependency-Check_Action@main
-      with:
-        project: "task-manager-backend"
-        path: "."
-        format: "HTML"
+    - name: Run npm audit
+      run: npm audit --audit-level=high
       continue-on-error: true
-      # Reason: Identifies supply-chain risks (Log4Shell-like issues)
+      # Reason: Identifies vulnerable third-party libraries
 
     # ----------------------------------------------------
-    # 6. Unit Testing
+    # 7. Unit Tests
     # ----------------------------------------------------
-    - name: Run Unit Tests
-      run: mvn test
-      # Reason: Prevents regressions in business logic
+    - name: Run unit tests
+      run: npm test
+      # Reason: Prevents regressions
 
     # ----------------------------------------------------
-    # 7. Build Application
+    # 8. Build Application
     # ----------------------------------------------------
-    - name: Build with Maven
-      run: mvn clean package -DskipTests
-      # Reason: Produces deployable artifact only after quality gates
+    - name: Build project
+      run: npm run build
+      # Skip if backend-only and no build step
 
     # ----------------------------------------------------
-    # 8. Docker Build
+    # 9. Docker Build
     # ----------------------------------------------------
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Build Docker Image
+    - name: Build Docker image
       run: |
-        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/task-manager-backend:latest .
+        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/node-app:latest .
 
     # ----------------------------------------------------
-    # 9. Trivy – Container Image Security Scan
+    # 10. Trivy – Container Image Scan
     # ----------------------------------------------------
     - name: Run Trivy vulnerability scan
       uses: aquasecurity/trivy-action@0.24.0
       with:
-        image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/task-manager-backend:latest
+        image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/node-app:latest
         format: 'sarif'
         output: 'trivy-results.sarif'
         severity: 'CRITICAL,HIGH'
         exit-code: '1'
-      # Reason: Prevents vulnerable images from shipping
 
-    - name: Upload Trivy scan results to GitHub Security
+    - name: Upload Trivy scan results
       uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: trivy-results.sarif
 
     # ----------------------------------------------------
-    # 10. Runtime Container Smoke Test
+    # 11. Runtime Container Smoke Test
     # ----------------------------------------------------
     - name: Run container and test
       run: |
-        docker run -d -p 8080:8080 --name task-manager-test \
-          ${{ secrets.DOCKERHUB_USERNAME }}/task-manager-backend:latest
+        docker run -d -p 3000:3000 --name node-test \
+          ${{ secrets.DOCKERHUB_USERNAME }}/node-app:latest
         sleep 10
-        curl -f http://localhost:8080 || exit 1
-        docker logs task-manager-test
-        docker stop task-manager-test
-        docker rm task-manager-test
-      # Reason: Ensures container is actually runnable
+        curl -f http://localhost:3000 || exit 1
+        docker stop node-test
+        docker rm node-test
+      # Reason: Ensures container is runnable
 
     # ----------------------------------------------------
-    # 11. Login to DockerHub
+    # 12. DockerHub Login
     # ----------------------------------------------------
     - name: Login to DockerHub
       uses: docker/login-action@v3
@@ -132,8 +129,8 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     # ----------------------------------------------------
-    # 12. Push Docker Image
+    # 13. Push Docker Image
     # ----------------------------------------------------
-    - name: Push Image to DockerHub
+    - name: Push Docker image
       run: |
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/task-manager-backend:latest
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/node-app:latest
