--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,6 +100,8 @@ jobs:
         output: 'trivy-results.sarif'
         severity: 'CRITICAL,HIGH'
         exit-code: '1'
+        ignore-unfixed: true
+
 
     - name: Upload Trivy scan results
       uses: github/codeql-action/upload-sarif@v3
