--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,21 +92,13 @@ jobs:
     # ----------------------------------------------------
     # 10. Trivy – Container Image Scan
     # ----------------------------------------------------
-    - name: Run Trivy vulnerability scan
+    - name: Trivy image scan
       uses: aquasecurity/trivy-action@0.24.0
       with:
-        image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/task-manager-backend:latest
-        format: 'sarif'
-        output: 'trivy-results.sarif'
-        severity: 'CRITICAL,HIGH'
-        exit-code: '1'
-        ignore-unfixed: true
+        image-ref: ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-backend:latest
+        severity: CRITICAL,HIGH
+        exit-code: 0
 
-
-    - name: Upload Trivy scan results
-      uses: github/codeql-action/upload-sarif@v3
-      with:
-        sarif_file: trivy-results.sarif
 
     # ----------------------------------------------------
     # 11. Runtime Container Smoke Test
