--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,7 +95,7 @@ jobs:
     - name: Trivy image scan
       uses: aquasecurity/trivy-action@0.24.0
       with:
-        image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-backend:latest
+        image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/task-manager-backend:latest
         severity: CRITICAL,HIGH
         exit-code: 0
 
